# troll_text

./: CMakeLists.txt  README.md  example.txt
src/: troll_text.cpp  troll_the_text.cpp  troll_the_text.h
